--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "dependencies": {
     "expo": "~41.0.0",
     "expo-status-bar": "~1.0.4",
-    "firebase": "^8.4.1",
+    "firebase": "^4.12.0",
     "lottie-react-native": "^3.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-dropdown-select": "^4.7.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
